Opened 8 years ago

Closed 8 years ago

#5114 closed defect (fixed)

Assertion next_dts <= 2147483647 failed at libavformat/movenc.c:874

Reported by: tsmith Owned by:
Priority: important Component: avformat
Version: git-master Keywords: crash abort mov regression
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

Summary of the bug:
Assertion next_dts <= 2147483647 failed at libavformat/movenc.c:874

How to reproduce:

% ffmpeg -i <test_case> -an out.mp4

ffmpeg version N-77454-ge42e0b1 Copyright (c) 2000-2015 the FFmpeg developers
  built with Ubuntu clang version 3.7.1-svn253742-1~exp1 (branches/release_37) (based on LLVM 3.7.1)
  configuration: --cc=clang --cxx=clang++ --disable-libxcb --disable-xlib --disable-logging --disable-ffprobe --disable-ffplay --disable-sdl --disable-ffserver --disable-doc --disable-pthreads --disable-network --disable-d3d11va --disable-dxva2 --disable-vaapi --disable-vda --disable-vdpau --disable-stripping --disable-runtime-cpudetect --disable-optimizations --disable-pic
  libavutil      55. 11.100 / 55. 11.100
  libavcodec     57. 20.100 / 57. 20.100
  libavformat    57. 20.100 / 57. 20.100
  libavdevice    57.  0.100 / 57.  0.100
  libavfilter     6. 21.101 /  6. 21.101
  libswscale      4.  0.100 /  4.  0.100
  libswresample   2.  0.101 /  2.  0.101

built on linux x86_64

Patches should be submitted to the ffmpeg-devel mailing list and not this bug tracker.

Attachments (1)

test_case.ivf (228 bytes ) - added by tsmith 8 years ago.

Download all attachments as: .zip

Change History (3)

by tsmith, 8 years ago

Attachment: test_case.ivf added

comment:1 by Carl Eugen Hoyos, 8 years ago

Keywords: crash abort mov regression added
Reproduced by developer: set
Status: newopen

For future tickets please remember to always post the command line that allows to reproduce the issue together with the complete, uncut console output.

The assertion failure is a regression since 96a58a8daa4d70e19d635b3823edbb8945116358 for the given file (there was a crash before but only for a few revisions).

$ ffmpeg -i test_case.ivf out.mov
ffmpeg version N-77567-g29e6606 Copyright (c) 2000-2015 the FFmpeg developers
  built with gcc 4.7 (SUSE Linux)
  configuration: --enable-gpl
  libavutil      55. 11.100 / 55. 11.100
  libavcodec     57. 20.100 / 57. 20.100
  libavformat    57. 21.100 / 57. 21.100
  libavdevice    57.  0.100 / 57.  0.100
  libavfilter     6. 22.100 /  6. 22.100
  libswscale      4.  0.100 /  4.  0.100
  libswresample   2.  0.101 /  2.  0.101
  libpostproc    54.  0.100 / 54.  0.100
Truncating packet of size 6561858 to 145
Input #0, ivf, from 'test_case.ivf':
  Duration: N/A, bitrate: N/A
    Stream #0:0: Video: vp9 (Profile 1) (VP90 / 0x30395056), yuv444p(tv), 17x1916, 0.0000 tbr, 0.0000 tbn, 0.0000 tbc
[mpeg4 @ 0x3ae84e0] bitrate tolerance 4000000 too small for bitrate 200000, overriding
Output #0, mov, to 'out.mov':
  Metadata:
    encoder         : Lavf57.21.100
    Stream #0:0: Video: mpeg4 (mp4v / 0x7634706D), yuv420p, 17x1916, q=2-31, 200 kb/s, 10240 tbn, 0.0000 tbc
    Metadata:
      encoder         : Lavc57.20.100 mpeg4
    Side data:
      unknown side data type 10 (24 bytes)
Stream mapping:
  Stream #0:0 -> #0:0 (vp9 (native) -> mpeg4 (native))
Press [q] to stop, [?] for help
FATAL error, file duration too long for timebase, this file will not be
playable with quicktime. Choose a different timebase or a different
container format
Assertion next_dts <= 2147483647 failed at libavformat/movenc.c:874
Aborted

comment:2 by Michael Niedermayer, 8 years ago

Resolution: fixed
Status: openclosed
Note: See TracTickets for help on using tickets.