avformat/movenc: Check that pkt duration is within 32bit range

Durations outside are not supported

Fixes Ticket5114
Signed-off-by: Michael Niedermayer <michael@niedermayer.cc>